--- a/search.html
+++ b/search.html
@@ -28,6 +28,7 @@
     <script src="_static/copybutton.js"></script>
     <script src="_static/customize.js"></script>
     <script src="_static/sphinx-book-theme.js"></script>
+    <script src="_static/customize.js"></script>
     <script >var togglebuttonSelector = '.toggle, .admonition.dropdown, .tag_hide_input div.cell_input, .tag_hide-input div.cell_input, .tag_hide_output div.cell_output, .tag_hide-output div.cell_output, .tag_hide_cell.cell, .tag_hide-cell.cell';</script>
     <script async="async" src="https://unpkg.com/thebelab@latest/lib/index.js"></script>
     <script >
