deploy: 05c233828b76a84a63de665567c75139995f44cf

--- a/example-notebooks/two_ion_vaet.html
+++ b/example-notebooks/two_ion_vaet.html
@@ -5,6 +5,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:title" content="Two-ion Vibrationally Assisted Energy Transport (VAET)" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://examples.ionsim.org/example-notebooks/two_ion_vaet.html" />
+  <meta property="og:description" content="Background: In:cite:`PhysRevX.8.011038` it is demonstrated that two ions in a Paul trap can be used to simulate the following Hamiltonian:{ \hat{H} = \underbrace{\frac{J}{2} \hat{\sigma}_x^{(1)} \o..." />
+  <meta property="og:image" content="https://raw.githubusercontent.com/HaeffnerLab/IonSim.jl-Examples/master/logo3_SM.png" />
+  <meta property="og:image:alt" content="Two-ion Vibrationally Assisted Energy Transport (VAET)" />
+  
     <title>Two-ion Vibrationally Assisted Energy Transport (VAET)</title>
     
   <link href="../_static/css/theme.css" rel="stylesheet">
