--- a/intro.html
+++ b/intro.html
@@ -5,6 +5,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:title" content="Introduction" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://examples.ionsim.org/intro.html" />
+  <meta property="og:description" content="This page contains a collection of interactive Jupyter notebooks intended to familiarize you with using IonSim.jl. These notebooks are organized into several sections: Tutorials and Examples: A col..." />
+  <meta property="og:image" content="https://raw.githubusercontent.com/HaeffnerLab/IonSim.jl-Examples/master/logo3_SM.png" />
+  <meta property="og:image:alt" content="Introduction" />
+  
     <title>Introduction</title>
     
   <link href="_static/css/theme.css" rel="stylesheet">
