--- a/learn-notebooks/coming_soon.html
+++ b/learn-notebooks/coming_soon.html
@@ -5,6 +5,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:title" content="Coming Soon" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://examples.ionsim.org/learn-notebooks/coming_soon.html" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/HaeffnerLab/IonSim.jl-Examples/master/logo3_SM.png" />
+  <meta property="og:image:alt" content="Coming Soon" />
+  
     <title>Coming Soon</title>
     
   <link href="../_static/css/theme.css" rel="stylesheet">
