--- a/example-notebooks/multi-mode_interactions.html
+++ b/example-notebooks/multi-mode_interactions.html
@@ -5,6 +5,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:title" content="Ion-laser interactions mediated by multiple vibrational modes" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://examples.ionsim.org/example-notebooks/multi-mode_interactions.html" />
+  <meta property="og:description" content="Introduction: In this notebook we will demonstrate that the simulation correctly models laser-mediated interactions between different vibrational modes in a linear chain of ions. We consider a syst..." />
+  <meta property="og:image" content="https://raw.githubusercontent.com/HaeffnerLab/IonSim.jl-Examples/master/logo3_SM.png" />
+  <meta property="og:image:alt" content="Ion-laser interactions mediated by multiple vibrational modes" />
+  
     <title>Ion-laser interactions mediated by multiple vibrational modes</title>
     
   <link href="../_static/css/theme.css" rel="stylesheet">
