--- a/example-notebooks/ramped_molmer_sorensen.html
+++ b/example-notebooks/ramped_molmer_sorensen.html
@@ -5,6 +5,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:title" content="Ramped Mølmer-Sørensen" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://examples.ionsim.org/example-notebooks/ramped_molmer_sorensen.html" />
+  <meta property="og:description" content="Consider two ions (modeled as two-level systems) and a single vibrational mode, addressed by bichromatic light in a rotating frame:{\hat{H} = \frac{\Omega(t)}{2} \sum\limits_{i=1,2}\bigg[ \bigg(\ha..." />
+  <meta property="og:image" content="https://raw.githubusercontent.com/HaeffnerLab/IonSim.jl-Examples/master/logo3_SM.png" />
+  <meta property="og:image:alt" content="Ramped Mølmer-Sørensen" />
+  
     <title>Ramped Mølmer-Sørensen</title>
     
   <link href="../_static/css/theme.css" rel="stylesheet">
