--- a/tutorial-notebooks/getting_started.html
+++ b/tutorial-notebooks/getting_started.html
@@ -5,6 +5,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:title" content="Getting started with IonSim" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://examples.ionsim.org/tutorial-notebooks/getting_started.html" />
+  <meta property="og:description" content="What does IonSim do?: IonSim is built on top of QuantumOptics.jl:cite:`kramer2018quantumoptics` and is primarily intended to simulate the following general system::::{figure,myclass} linear-chain-i..." />
+  <meta property="og:image" content="https://raw.githubusercontent.com/HaeffnerLab/IonSim.jl-Examples/master/logo3_SM.png" />
+  <meta property="og:image:alt" content="Getting started with IonSim" />
+  
     <title>Getting started with IonSim</title>
     
   <link href="../_static/css/theme.css" rel="stylesheet">
