--- a/example-notebooks/multi-mode_interactions.html
+++ b/example-notebooks/multi-mode_interactions.html
@@ -556,6 +556,8 @@ title="Print to PDF"
 </pre></div>
 </div>
 </div>
+<div class="cell_output docutils container">
+</div>
 </div>
 <div class="cell docutils container">
 <div class="cell_input docutils container">
