--- a/intro.html
+++ b/intro.html
@@ -8,9 +8,10 @@
 <meta property="og:title" content="Introduction" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://ionsim.org/intro.html" />
+<meta property="og:site_name" content="Python" />
 <meta property="og:description" content="This page contains a collection of interactive Jupyter notebooks intended to familiarize you with using IonSim.jl. You can return to the main page here(or by clicking on the logo in the sidebar)." />
 <meta property="og:image" content="https://raw.githubusercontent.com/HaeffnerLab/IonSim.jl-Examples/master/logo3_SM.png" />
-<meta property="og:image:alt" content="Introduction" />
+<meta property="og:image:alt" content="Python" />
 <meta name="description" content="This page contains a collection of interactive Jupyter notebooks intended to familiarize you with using IonSim.jl. You can return to the main page here(or by clicking on the logo in the sidebar)." />
 
     <title>Introduction</title>
